--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,9 @@
 *.uasset filter=lfs diff=lfs merge=lfs -text
 *.umap filter=lfs diff=lfs merge=lfs -text
 
+# Wwise file types
+*.bnk filter=lfs diff=lfs merge=lfs -text
+
 # Raw Content types
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.3ds filter=lfs diff=lfs merge=lfs -text
@@ -14,3 +17,4 @@
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.xcf filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+
